# Phishing_classification

./: DT.ipynb  NN.ipynb  README.md  preprocess.ipynb  pyproject.toml
src/: DT.ipynb  NN.ipynb  preprocess.ipynb
