[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "pandas>=2.2.3",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
